--- a/.github/workflows/skill_tests.yml
+++ b/.github/workflows/skill_tests.yml
@@ -12,6 +12,8 @@ jobs:
     uses: neongeckocom/.github/.github/workflows/skill_tests.yml@master
   skill_intent_tests:
     uses: neongeckocom/.github/.github/workflows/skill_test_intents.yml@master
+    with:
+      ovos_versions: "[]"
   skill_resource_tests:
     uses: neongeckocom/.github/.github/workflows/skill_test_resources.yml@master
   skill_install_tests:
